# Zen

./: .gitignore  CMakeLists.txt  README.md
essentials/: CMakeLists.txt
essentials/Logger/: Logger.h
essentials/android-inline-hook/shadowhook/: CMakeLists.txt
essentials/imgui/: imgui.cpp  imgui.h
src/: CMakeLists.txt  GTsymbols.h  Gui.cpp  Gui.h  Hook.cpp  Hook.h  Main.cpp  Scanner.cpp  Scanner.h  Structures.h
