cmake_minimum_required(VERSION 3.30)
project(shadowhook)

if(${CMAKE_ANDROID_ARCH_ABI} STREQUAL "arm64-v8a" OR ${ANDROID_ABI} STREQUAL "arm64-v8a")
    set(ARCH "arm64")
    set(ARCH_LINK_FLAGS "-Wl,-z,max-page-size=16384")
    message(STATUS "Shadowhook: Using ${ARCH} ABI")
elseif(${ANDROID_ABI} STREQUAL "armeabi-v7a")
    set(ARCH "arm")
    set(ARCH_LINK_FLAGS "")
endif()

set(TARGET "shadowhook")
file(GLOB SRC *.c arch/${ARCH}/*.c common/*.c third_party/*/*.c)
add_library(${TARGET} STATIC ${SRC})
target_compile_features(${TARGET} PRIVATE c_std_17)
target_compile_options(${TARGET} PRIVATE -std=c99)
target_include_directories(${TARGET} PRIVATE . include arch/${ARCH} common third_party/xdl third_party/bsd third_party/lss)
target_link_libraries(${TARGET} log)

target_link_options(${TARGET} PRIVATE ${ARCH_LINK_FLAGS})
if(USEASAN)
    target_compile_options(${TARGET} PRIVATE -fsanitize=address -fno-omit-frame-pointer)
    target_link_options(${TARGET} PRIVATE -fsanitize=address)
else()
    target_compile_options(${TARGET} PRIVATE -Oz -ffunction-sections -fdata-sections)
    target_link_options(${TARGET} PRIVATE -Oz -Wl,--exclude-libs,ALL -Wl,--gc-sections -Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/shadowhook.map.txt)
endif()
